--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 
   <body>
     <div class="main">
+      <div class="text">what is consciousness?</div>
+      <div class="head"></div>
     </div>
 
   </body>
