--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
   <body>
     <div class="main">
       <div class="text">what is consciousness?</div>
-      <div class="head"></div>
+      <div class="text2">we must</div>
+      <div class="text3">dive deeper</div>
+      <div class="head">
+          <div class="next-button"></div>
+      </div>
     </div>
 
   </body>
