--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div class="text2">we must</div>
       <div class="text3">dive deeper</div>
       <div class="head">
-          <div class="next-button"></div>
+          <div class="next-button"><a href="page2.html">next</a></div>
       </div>
     </div>
 
