--- a/index.html
+++ b/index.html
@@ -12,9 +12,8 @@
       <div class="text">what is consciousness?</div>
       <div class="text2">we must</div>
       <div class="text3">dive deeper</div>
-      <div class="head">
-          <div class="next-button"><a href="page2.html">next</a></div>
-      </div>
+      <img href="body.gif" width="700px">
+      <div class="next-button"><a href="page2.html">next</a></div>
     </div>
 
   </body>
