--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
   </head>
 
   <body>
+    <img href="body.gif">
     <div class="main">
       <div class="text">what is consciousness?</div>
       <div class="text2">we must</div>
       <div class="text3">dive deeper</div>
-      <img href="body.gif" width="700px">
+
       <div class="next-button"><a href="page2.html">next</a></div>
     </div>
 
