--- a/index.html
+++ b/index.html
@@ -5,15 +5,17 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=New+Tegomin&display=swap" rel="stylesheet">
   </head>
 
   <body>
-    <img href="body.gif">
+
     <div class="main">
       <div class="text">what is consciousness?</div>
       <div class="text2">we must</div>
       <div class="text3">dive deeper</div>
-
+      <img src="body2.gif">
       <div class="next-button"><a href="page2.html">next</a></div>
     </div>
 
