--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div class="text2">we must</div>
       <div class="text3">dive deeper</div>
       <img src="body2.gif">
-      <div class="next-button"><a href="page2.html">next</a></div>
+      <div class="next-button"><a href="page2.html">dive</a></div>
     </div>
 
   </body>
