--- a/page2.html
+++ b/page2.html
@@ -5,14 +5,15 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main2.css">
+    <link href="https://fonts.googleapis.com/css2?family=New+Tegomin&display=swap" rel="stylesheet">
   </head>
 
   <body>
     <div class="main">
       <div class="text">consciousness doesn't have a set form or definition</div>
       <div class="text2">so how do we know it exists?</div>
-      <div class="text3">we must dive deeper</div>
-      <div class="next-button"><a href="page3.html">next</a></div>
+      <div class="text3">we must dive</div>
+      <div class="next-button"><a href="page3.html">deeper</a></div>
 
     </div>
 
