--- a/page2.html
+++ b/page2.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main2.css">
     <link href="https://fonts.googleapis.com/css2?family=New+Tegomin&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/png" href="icons.png">
   </head>
 
   <body>
@@ -14,6 +15,7 @@
       <div class="text2">so how do we know it exists?</div>
       <div class="text3">we must dive</div>
       <div class="next-button"><a href="page3.html">deeper</a></div>
+      <img src="head.gif" width="800px">
 
     </div>
 
