--- a/eyes.html
+++ b/eyes.html
@@ -4,14 +4,14 @@
     <title>Dive Deeper In</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="main3.css">
+    <link rel="stylesheet" href="eyes.css">
     <link href="https://fonts.googleapis.com/css2?family=New+Tegomin&display=swap" rel="stylesheet">
     <link rel="icon" type="image/png" href="icons.png">
   </head>
 
   <body>
     <div class="main">
-      
+      <img src="eyes.gif" class="left">
 
     </div>
 
