--- a/eyes.html
+++ b/eyes.html
@@ -12,6 +12,13 @@
   <body>
     <div class="main">
       <img src="eyes.gif" class="left">
+      <img src="eyes.gif" class="right">
+      <img src="head.gif" class="head">
+      <div class="text">is awareness enough?</div>
+      <div class="text2">what do we truly see?</div>
+      <div class="text3">there is more to explore</div>
+      <div class="text4">we must dive</div>
+      <div class="next-button"><a href="page3.html">deeper</a></div>
 
     </div>
 
