--- a/hear.html
+++ b/hear.html
@@ -4,14 +4,16 @@
     <title>Dive Deeper In</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="main3.css">
+    <link rel="stylesheet" href="hear.css">
     <link href="https://fonts.googleapis.com/css2?family=New+Tegomin&display=swap" rel="stylesheet">
     <link rel="icon" type="image/png" href="icons.png">
   </head>
 
   <body>
     <div class="main">
-      
+      <iframe width="0px" height="0px" src="https://www.youtube.com/watch?v=VL6XsKI1738?autoplay=1&loop=1"" frameborder="0px" allowfullscreen ></iframe>
+      <img src="ear.gif">
+
 
     </div>
 
