--- a/hear.html
+++ b/hear.html
@@ -11,8 +11,36 @@
 
   <body>
     <div class="main">
-      <iframe width="0px" height="0px" src="https://www.youtube.com/watch?v=VL6XsKI1738?autoplay=1&loop=1"" frameborder="0px" allowfullscreen ></iframe>
       <img src="ear.gif">
+      <!-- <div style="position:relative;width:267px;height:25px;overflow:hidden;"> -->
+        <object width="200" height="200"
+                style="position:absolute;top:-141px;right:105px;opacity:0">
+          <param name="movie"
+                 value="http://www.youtube.com/v/1tJJJ-bLP00?&autoplay=1">
+          </param>
+          <param name="allowFullScreen"
+                 value="true">
+          </param>
+          <param name="allowscriptaccess"
+                 value="always">
+          </param>
+          <embed src="http://www.youtube.com/v/1tJJJ-bLP00?&autoplay=1"
+                 type="application/x-shockwave-flash"
+                 width="420"
+                 height="315"
+                 allowscriptaccess="always"
+                 allowfullscreen="true">
+          </embed>
+        </object>
+      <div class="text">now listen quietly...</div>
+      <div class="text2">what do you hear?</div>
+      <div class="text3">do you feel any different?</div>
+      <div class="text4">have you reached a newfound</div>
+      <div class="text5"><a href="https://meditativemind.org/285hz-963-hz-frequency-music-benefits-of-these-healing-frequencies/" target="blank">clarity?</a></div>
+      <div class="text6">there is more to explore</div>
+      <div class="text7">we must dive</div>
+      <div class="next-button"><a href="page3.html">deeper</a></div>
+
 
 
     </div>
