--- a/think.html
+++ b/think.html
@@ -4,14 +4,14 @@
     <title>Dive Deeper In</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="main3.css">
+    <link rel="stylesheet" href="think.css">
     <link href="https://fonts.googleapis.com/css2?family=New+Tegomin&display=swap" rel="stylesheet">
     <link rel="icon" type="image/png" href="icons.png">
   </head>
 
   <body>
     <div class="main">
-      
+      <iframe width="1424" height="514" src="https://www.youtube.com/embed/Pxsyti0Csvo?&autoplay=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
     </div>
 
