--- a/think.html
+++ b/think.html
@@ -11,7 +11,17 @@
 
   <body>
     <div class="main">
-      <iframe width="1424" height="514" src="https://www.youtube.com/embed/Pxsyti0Csvo?&autoplay=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <video width="940" height="500" controls>
+        <source src="light.mp4" type="video/mp4">
+        <source src="movie.ogg" type="video/ogg">
+      </video>
+      <div class="text">are thoughts just our consciousness just speakign to us? </div>
+      <div class="text2">does the chaos of the mind truly ever stop?</div>
+      <div class="text3">for if it does stop, how do we know if it truly ever began?</div>
+      <div class="text4">there is more to explore</div>
+      <div class="text5">we must go</div>
+      <div class="next-button"><a href="page3.html">deeper</a></div>
+
 
     </div>
 
