--- a/page3.html
+++ b/page3.html
@@ -12,8 +12,8 @@
   <body>
     <div class="main">
       <img src="path.gif" width="1100px">
-      <div class="text">we must dive</div>
-      <div class="next-button"><a href="page3.html">deeper</a></div>
+      <div class="text">we must dive deeper</div>
+      <!-- <div class="next-button"><a href="page3.html">deeper</div> -->
       <div class="text2">but what path do we take?</div>
       <div class="text3"><a href="eyes.html">sight</a></div>
       <div class="text4"><a href="think.html">thoughts</a></div>
